--- a/progate/progate.ipynb
+++ b/progate/progate.ipynb
@@ -88,25 +88,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "WHERE category = '食費'\n",
+    "AND name = ''\n",
+    "OR name = ''\n",
+    ";\n",
+    "\n",
+    "\n",
+    "AND演算子を使うと、WHEREに複数の条件を指定することができます。\n",
+    "\n",
+    "OR演算子は、AND演算子と同様に、複数の条件を扱います。"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "ORDER BY 並べ替えたいカラム名　並べ方;\n",
+    "SQLでは「昇順」は「ASC」、「降順」は「DESC」と指定します。\n",
+    "\n",
+    "ORDER BY price DESC;"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "LIMIT データの数:"
+   ]
   }
  ],
  "metadata": {
