--- a/progate/progate.ipynb
+++ b/progate/progate.ipynb
@@ -141,6 +141,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DISTINCT（カラム）　重複を削除できる"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "四則演算\n",
+    "SELECT　name, price * 1.08"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT　SUM（price）\n",
+    "FROM　purchases\n",
+    "WHERE　character_name = 'にんじゃわんこ'；\n",
+    "\n",
+    "AVG（price）\n",
+    "COUNT(price)\n",
+    "MAX(price)\n",
+    "MIN（price）\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "グループ化\n",
+    "GROUP BY　カラム名\n",
+    "\n",
+    "グループ化したデータの絞り込み\n",
+    "HAVING\n",
+    "WHEREは全データの絞り込み"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|優先順位  |　コード  |\n",
+    "|---|---|\n",
+    "|検索 |　WHERE |\n",
+    "|グループ化 |　GROUP　BY |\n",
+    "|関数  | COUNT　SUM　AVG　MAX　MIN |\n",
+    "|HAVING  |HAVING |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "JOINは複数のテーブルを1つに結合したいときに使います。\n",
+    "結合条件は、「ON テーブル名.カラム名 = テーブル名.カラム名」で指定します。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
