--- a/progate/progate.ipynb
+++ b/progate/progate.ipynb
@@ -202,6 +202,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SQL３"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "クエリの中に他のクエリを入れることができます。この他のクエリをサブクエリと言います。\n",
+    "\n",
+    "SELECT　name\n",
+    "FROM players\n",
+    "WHERE goals > (\n",
+    "    SELECT goals\n",
+    "    FROM players\n",
+    "    WHERE name = 'ウィル'\n",
+    "    ）；\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|実行順位  |　コード  |\n",
+    "|---|---|\n",
+    "|テーブルの指定  |FROM  |\n",
+    "|結合 |JOIN ON |\n",
+    "|取得条件 |WHERE  |\n",
+    "|グループ化 |GROUP　BY  |\n",
+    "|関数 |COUNT　SUM　AVG　MIN |\n",
+    "|HAVING  |HAVING  |\n",
+    "|検索  |SELECT　DISTINCT  |\n",
+    "|順序  |ORDER　BY  |\n",
+    "|LIMIT |LIMIT |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LEFT JOINを使うことで、FROMで指定したテーブルのレコードを全て取得します。外部キーがNULLのレコードもNULLのまま実行結果に表示されます。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT　＊\n",
+    "FROM　players\n",
+    "JOIN countries\n",
+    "ON players.country_id = countries.id\n",
+    "LEFT JOIN teams\n",
+    "ON players.previous_team_id = teams.id;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "INSERT\n",
+    "テーブルにレコードを挿入したいときはINSERTを使います。\n",
+    "INSERTとは「挿入する」という意味です。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "データを更新したいときにはUPDATEを使います。\n",
+    "複数変更したいカラムがある場合、コンマ(,)で区切ります。\n",
+    "実行前に一度SELECTを実行して、操作するデータを確認する習慣をつけましょう。\n",
+    "\n",
+    "UPDATE students\n",
+    "SET name = 'jordan', course  = 'HTML'\n",
+    "WHERE id = 6;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "レコードを削除するときはDELETEを使います。\n",
+    "UPDATEと同様にクエリ実行後はレコードを元に戻すことができないので、SELECTでレコードを確認してから削除を行いましょう。\n",
+    "\n",
+    "DELETE FROM students\n",
+    "WHERE id = 7;\n",
+    "\n",
+    "WHEREで削除するレコードを指定しないとテーブル内の全レコードが削除されてしまいます。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|   |   |   |   |\n",
+    "|:--|:--|:--|:--|\n",
+    "|取得   |SELECT カラムA,カラムB |更新   |UPDATE テーブル名  |\n",
+    "|        |FROM テーブル名;   |        |SET カラムA　= 値１, カラムB　= 値２ |\n",
+    "|        |          |          |WHERE 条件；|\n",
+    "|挿入   |INSERT　INTO　テーブル名（カラムA, カラムB...）    |削除   |DELETE FROM テーブル名   |\n",
+    "|        |VALUES(値１, 値２...);|        |WHERE 条件；|"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
