--- a/progate/progate.ipynb
+++ b/progate/progate.ipynb
@@ -309,11 +309,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "FIN"
+   ]
   }
  ],
  "metadata": {
