--- a/progate/progate.ipynb
+++ b/progate/progate.ipynb
@@ -318,7 +318,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "PROGATE"
+   ]
   },
   {
    "cell_type": "code",
